fix(VerticalTabs): set tab text to wrap when necessary (#664)
affects: patternfly3-react-lerna-root, patternfly-react-extensions

Changed the tab from a button to an anchor and set the width to be 100% of the li and to wrap on
long text.

ISSUES CLOSED: #663

--- a/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_vertical-tabs.scss
+++ b/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_vertical-tabs.scss
@@ -7,21 +7,35 @@
   margin-top: 4px;
   position: relative;
 
-  .btn.btn-link {
+  > a {
     color: $vertical-tab-pf-color;
+    display: inline-block;
     font-size: 13px;
     padding-left: 15px;
+    vertical-align: top;
+    width: 100%;
+    word-break: break-word;
 
     &:hover,
     &:focus {
       color: $vertical-tab-pf-active-color;
-      outline: 0;
       text-decoration: none;
+    }
+
+    &.no-wrap {
+      overflow-x: hidden;
+      white-space: nowrap;
+    }
+
+    &.truncate {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
   &.active {
-    > .btn.btn-link {
+    > a {
       color: $vertical-tab-pf-active-color;
 
       &::before {
